Made many improvements
Improved UI
Fixed Date bug
Added Icons

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Space+Grotesk&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Blocker</title>
@@ -17,10 +20,11 @@
             <form role="search" class="form">
                 <input type="text" id="category_input" placeholder="Category">
             </form>
-            <button type="button" class="add" id="category_add">Add</button>
+            <button type="button" class="add" id="category_add"><svg width="24px" height="24px" viewBox="0 0 24.00 24.00" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <circle opacity="0.5" cx="12" cy="12" r="10" stroke="#ffffff" stroke-width="1.56"></circle> <path d="M15 12L12 12M12 12L9 12M12 12L12 9M12 12L12 15" stroke="#ffffff" stroke-width="1.56" stroke-linecap="round"></path> </g></svg></button>
         </div>
         <div class="container" id="main_container">
         </div>
+        <div class="bottom_padding"></div>
     </div>
 </body>
 <script src="script.js"></script>
